# test_search

./: .gitignore  Makefile  README.md  pyproject.toml
deploy/: init.sql  project.yml  storage.yml
deploy/nginx/: nginx.conf
deploy/nginx/config/: site.conf
etl/: contextmanager.py  extract.py  load_to_es.py  load_to_postgres.py  main.py  models.py  transform.py
src/: Dockerfile  main.py  pyproject.toml
src/api/v1/: posts_api.py
src/core/: config.py  env.example  logger.py
src/db/: postgres.py
src/etl/: es_index.py  extract.py  load_to_es.py  load_to_postgres.py  main.py  transform.py
src/models/: posts.py
src/repositories/: base_repository.py  post_repository.py
src/services/: post_service.py
